saving current state for containers